Add unit tests for reading sign

--- a/BigFloat.UnitTests/BigFloat.UnitTests.csproj
+++ b/BigFloat.UnitTests/BigFloat.UnitTests.csproj
@@ -17,7 +17,10 @@
     <Folder Include="UsingStaticMethods\" />
     <Folder Include="UsingInstanceMethods\" />
     <Folder Include="UsingConstructors\" />
-    <Folder Include="UsingProperties\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BigFloat\BigFloat.csproj" />
   </ItemGroup>
 
 </Project>
