Rename projects to no longer conflict namespaces

--- a/BigFloat.Example/Com.Github.EvanQuan.BigFloat.Example.csproj
+++ b/BigFloat.Example/Com.Github.EvanQuan.BigFloat.Example.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BigFloat\BigFloat.csproj" />
+    <ProjectReference Include="..\BigFloat\Com.Github.EvanQuan.BigFloat.csproj" />
   </ItemGroup>
 
 </Project>
