--- a/BigFloat.UnitTests/Com.Github.EvanQuan.BigFloat.UnitTests.csproj
+++ b/BigFloat.UnitTests/Com.Github.EvanQuan.BigFloat.UnitTests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BigFloat\BigFloat.csproj" />
+    <ProjectReference Include="..\BigFloat\Com.Github.EvanQuan.BigFloat.csproj" />
   </ItemGroup>
 
 </Project>
