--- a/BigFloat.Example/BigFloatingPoint.Example.csproj
+++ b/BigFloat.Example/BigFloatingPoint.Example.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BigFloat\Com.Github.EvanQuan.BigFloatingPoint.csproj" />
+    <ProjectReference Include="..\BigFloat\BigFloatingPoint.csproj" />
   </ItemGroup>
 
 </Project>
