--- a/BigFloat.UnitTests/BigFloatingPoint.UnitTests.csproj
+++ b/BigFloat.UnitTests/BigFloatingPoint.UnitTests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BigFloat\Com.Github.EvanQuan.BigFloatingPoint.csproj" />
+    <ProjectReference Include="..\BigFloat\BigFloatingPoint.csproj" />
   </ItemGroup>
 
 </Project>
