--- a/BigFloatingPoint.UnitTests/BigFloatingPoint.UnitTests.csproj
+++ b/BigFloatingPoint.UnitTests/BigFloatingPoint.UnitTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BigFloat\BigFloatingPoint.csproj" />
+    <ProjectReference Include="..\BigFloatingPoint\BigFloatingPoint.csproj" />
   </ItemGroup>
 
 </Project>
