Add implicit and explict conversion regions

--- a/BigFloatingPoint.FunctionalTests/BigFloatingPoint.FunctionalTests.csproj
+++ b/BigFloatingPoint.FunctionalTests/BigFloatingPoint.FunctionalTests.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="UsingImplicitOperators\" />
     <Folder Include="UsingOperators\" />
     <Folder Include="UsingStaticMethods\" />
     <Folder Include="UsingConstructors\" />
