--- a/BigFloatingPoint/BigFloatingPoint.csproj
+++ b/BigFloatingPoint/BigFloatingPoint.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="src\**" />
     <EmbeddedResource Remove="src\**" />
