--- a/BigFloatingPoint.FunctionalTests/BigFloatingPoint.FunctionalTests.csproj
+++ b/BigFloatingPoint.FunctionalTests/BigFloatingPoint.FunctionalTests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UsingImplicitOperators\" />
+    <Folder Include="UsingImplicitConversion\" />
   </ItemGroup>
 
   <ItemGroup>
